--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -98,3 +98,147 @@
   }
  }
 }
+
+.header{
+ border-top: 1px solid $side;
+ border-bottom: 1px solid $side;
+ &__inner{
+  display: flex;
+  align-items: center;
+  max-width: 1440px;
+  width: 100%;
+  padding: 0 82px;
+  margin: 0 auto;
+
+  form{
+   margin-right: 88px;
+   label{
+    position: relative;
+
+   input{
+    margin-left: 24px;
+    border: 1px solid #B7B8C5;
+    border-radius: 30px;
+    background-color: #fff;
+    padding: 10px 41px;
+    width: 490px;
+    color: $bg;
+    &::placeholder{
+     font-size: 15px;
+     line-height: 20px;
+     color: #B7B8C5;
+    }
+   }
+   img{
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 5px;
+    left: 40px;
+    color: $bg;
+    cursor: pointer;
+   }
+   button{
+    border: none;
+    background-color: $light;
+    border-radius: 0px 30px 30px 0px;
+    color: #fff;
+    padding: 8px 25px;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    @include f500;
+    position: absolute;
+    top: -5px;
+    right: 0px;
+    cursor: pointer;
+   }
+  }
+  }
+ }
+ &__menu{
+  border-left: 2px solid $side;
+  border-right: 2px solid $side;
+  padding: 24px 0;
+  display: flex;
+  align-items: center;
+  &-btn{
+   width: 20px;
+   margin-left: 20px;
+   cursor: pointer;
+   span{
+    display: block;
+    height: 2px;
+    background-color: $bg;
+    border-radius: 1px;
+    &+span{
+     margin-top: 6px;
+    }
+   }
+  }
+
+  &-title{
+   margin-left: 52px;
+   color: $bg;
+   @include f600;
+   text-transform: uppercase;
+   line-height: 139.02%;
+   margin-right: 160px;
+  }
+ }
+ &__box{
+  display: flex;
+  align-items: center;
+  &-user{
+   margin-right: 30px;
+   background-color: $light;
+   width: 34px;
+   height: 34px;
+   border-radius: 50%;
+   color: #fff;
+   padding: 6px 10px;
+   font-size: 18px;
+   line-height: 22px;
+   text-align: center;
+   @include f500;
+   cursor: pointer;
+  }
+  &-heart{
+   position: relative;
+   cursor: pointer;
+   margin-right: 30px;
+   span{
+    position: absolute;
+    width: 21px;
+    height: 21px;
+    border-radius: 50%;
+    background: linear-gradient(180deg, #ED9BC1 0%, #ED9BB9 100%);
+    color: #ffffff;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: center;
+    padding: 4px 5px;
+    top: -9px;
+    right: -10px;
+   }
+  }
+  &-basket{
+   position: relative;
+   cursor: pointer;
+   span{
+    position: absolute;
+    width: 21px;
+    height: 21px;
+    border-radius: 50%;
+    background: linear-gradient(180deg, #ED9BC1 0%, #ED9BB9 100%);
+    color: #ffffff;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: center;
+    padding: 4px 5px;
+    top: -6px;
+    right: -10px;
+   }
+  }
+ }
+}
