--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -163,6 +163,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+
   &-btn{
    width: 20px;
    margin-left: 20px;
@@ -176,7 +177,9 @@
     }
    }
   }
-
+  .header__menu-btn__off{
+   display: none;
+  }
   &-title{
    margin-left: 13px;
    color: $bg;
@@ -192,10 +195,27 @@
    }
    .header__menu-btn{
     span{
+     display: none;
+    }
+   }
+   .header__menu-btn__off{
+    display: block;
+    width: 20px;
+    margin-left: -20px;
+    margin-top: 3px;
+    span {
+     display: block;
+     height: 2px;
      background-color: #fff;
+     border-radius: 1px;
+     transform: rotate(45deg) translate(1%, -50%);;
+     &+span{
+      transform: rotate(-45deg) translate(11%, -50%);;
+     }
     }
    }
   }
+
  }
  &__box{
   display: flex;
@@ -255,17 +275,26 @@
 }
 
 .catalog {
+ position: relative;
  &__items{
   border: 1px solid #74CCD8;
   box-shadow: 0px 4px 11px rgba(68, 97, 132, 0.08);
   border-radius: 0px 0px 10px 10px;
-  max-width: 365px;
+  max-width: 367px;
   width: 100%;
+
  }
  &__item{
   background-color: #fff;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #74CCD8;
+  position: relative;
+  cursor: pointer;
+  &+.catalog__item:last-child{
+   border-bottom: none;
+   border-radius: 0px 0px 10px 10px;
+  }
   &-images{
    margin-left: 20px;
    padding-top: 6px;
@@ -276,5 +305,59 @@
    color: $bg;
    @include f500;
   }
+  &-arrow{
+   position: absolute;
+   right: 20px;
+  }
+  &:hover{
+   background: linear-gradient(180deg, #ED9BC1 0%, #ED9BB9 100%);
+   .catalog__item-title{
+    color: #fff;
+   }
+   .catalog__item-arrow{
+    svg{
+     path{
+      stroke: #fff;
+     }
+    }
+   }
+  .catalog__item-images{
+   svg{
+    path{
+     fill: #fff;
+    }
+   }
+  }
+  }
+  &-subcatalogs{
+   list-style: none;
+   position: absolute;
+  left: -30px;
+   display: flex;
+   &--title {
+    font-size: 16px;
+    line-height: 22px;
+    @include f500;
+    color: $bg;
+    margin: 14px 20px 16px;
+   }
+   &--catalog-list{
+    font-size: 14px;
+    line-height: 19px;
+    color: #686877;
+    margin-left: 20px;
+    margin-bottom: 20px;
+   }
+  }
+ }
+}
+
+.header__inner-bottom{
+ position: relative;
+ .catalog{
+  position: absolute;
+  top: 66px;
+  max-width: 367px;
+  width: 100%;
  }
 }
