--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -171,6 +171,8 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  transition: all .5s;
+ 
 
   &-btn{
    width: 20px;
@@ -198,6 +200,8 @@
   }
   &.active{
    background-color: $light;
+   overflow: auto;
+   height: auto;
    .header__menu-title{
     color: #fff;
    }
@@ -210,6 +214,7 @@
     display: block;
     width: 20px;
     margin-left: -20px;
+    transition: all .5s;
     span {
      display: block;
      height: 2px;
@@ -286,8 +291,12 @@
 }
 }
 
+
+
 .catalog {
  position: relative;
+ height: 0;
+ overflow: hidden;
  &__items{
   border: 1px solid #74CCD8;
   box-shadow: 0px 4px 11px rgba(68, 97, 132, 0.08);
