--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -368,12 +368,14 @@
 
 .catalog {
  position: relative;
+ z-index: 1;
  &__items{
   border: 1px solid #74CCD8;
   box-shadow: 0px 4px 11px rgba(68, 97, 132, 0.08);
   border-radius: 0px 0px 10px 10px;
   max-width: 367px;
   width: 100%;
+  
 
  }
  &__item{
@@ -430,6 +432,8 @@
    top: 56px;
    display: flex;
    gap: 30px;
+   z-index: 1;
+   background-color: #fff;
   
    &__title {
     font-size: 16px;
@@ -453,9 +457,126 @@
  }
 }
 
-.slider-presentation{
+.slider-presentation{  
+   display: flex;
    margin-top: 20px;
-   &_images{
-      display: flex;
+   gap: 10px;
+   .slick-slider { 
+      max-width: 746px;
+      width: 100%;
+      .slick-prev, 
+      .slick-next{
+       width: 0;
+       height: 0;
+      }
+   .slick-arrow.slick-prev{
+      position: relative;
+      &::before{
+         content: '';
+         position: absolute;
+         background-image: url(../../images/content/prev.svg);
+         background-size: cover;
+         background-position: 0 0;
+         background-repeat: no-repeat;
+         top: -7px;
+         right: -23px;
+         width: 10px;
+         height: 20px;
+         z-index: 1;
+      }
+     
+   }
+   .slick-arrow.slick-next{
+      position: relative;
+       &::before{
+         content: '';
+         position: absolute;
+         background-image: url(../../images/content/next.svg);
+         background-size: cover;
+         background-position: 0 0;
+         background-repeat: no-repeat;
+         bottom: 375px;
+         left: 690px;
+         width: 10px;
+         height: 20px;
+         z-index: 1;
+      }
+   }
+   }
+
+   .slick-dots {
+      bottom: 30px;
+      li button:before {
+      font-family: 'slick';
+      font-size: 10px;
+      line-height: 20px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 20px;
+      content: '•';
+      text-align: center;
+      opacity: .8;
+      color: #fff;
+      border-radius: 7px;
+     
+  }
+  .slick-active button:before{
+   color: #74CCD8;
+}
+}
+&__right{
+   img:last-child{
+      margin-top: 25px;
+   }
+}
+}
+
+.slider-carousel{
+    max-width: 1050px;
+      width: 100%;
+      margin-left: 73px;
+      margin-top: 40px;
+   .slick-slider {
+      .slick-prev, 
+      .slick-next{
+       width: 0;
+       height: 0;
+      }
+     
+      .slick-arrow.slick-prev{
+         position: relative;
+         &::before{
+            content: '';
+            position: absolute;
+            background-image: url(../../images/content/prev.svg);
+            background-size: cover;
+            background-position: 0 0;
+            background-repeat: no-repeat;
+            top: 82px;
+            right: 5px;
+            width: 10px;
+            height: 20px;
+            z-index: 1;
+         }
+        
+      }
+      .slick-arrow.slick-next{
+         position: relative;
+          &::before{
+            content: '';
+            position: absolute;
+            background-image: url(../../images/content/next.svg);
+            background-size: cover;
+            background-position: 0 0;
+            background-repeat: no-repeat;
+            bottom: 90px;
+            left: 1050px;
+            width: 10px;
+            height: 20px;
+            z-index: 1;
+         }
+      }
    }
 }
