--- a/src/components/products/index.scss
+++ b/src/components/products/index.scss
@@ -3,9 +3,10 @@
 .products{
     margin-top: 94px;
     margin-bottom: 127px;
-    margin-left: 66px;
+    margin-left: 37px;
     max-width: 1090px;
     width: 100%;
+    
     &__title{
         font-size: 28px;
         line-height: 36px;
@@ -26,27 +27,32 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: flex-end;;
-        gap: 50px;
-        margin-top: 50px;
+        gap: 18px;
+        margin-top: 26px;
         cursor: pointer;
        
        
         
     }
     &__image{
-        max-width: 140px;
+        max-width: 166px;
         width: 100%;
-        margin-bottom: 22px;
-        height: 126px;
+        margin-bottom: 32px;
+        text-align: center;
+        padding: 24px 13px;
+        
         &:hover{
             background: #74CCD8;
             box-shadow: 0px 2px 4px rgba(51, 196, 223, 0.2);
             border-radius: 10px;
             text-align: center;
+            padding: 24px 13px;
             .products__image-title{
                 color: #fff;
-                margin: 0 auto;
             }
+            }
+            img{
+                margin: 0 auto;
             }
       &-title{
         font-size: 15px;
@@ -55,6 +61,7 @@
         @include f500;
         width: max-content;
         margin-top: 9px;
+        margin: 0 auto;
       }
     }
 }
