--- a/src/components/sale/index.scss
+++ b/src/components/sale/index.scss
@@ -36,10 +36,10 @@
     position: relative;
     margin-left: 24px;
     
-    &-wrapper {
-        display: flex;
-        align-items: center; 
-    }
+    // &-wrapper {
+    //     display: flex;
+    //     align-items: center; 
+    // }
 
     &-image{
         margin-bottom: 12px;
