--- a/src/components/brand/index.scss
+++ b/src/components/brand/index.scss
@@ -1,1 +1,31 @@
 @import "../../scss/vars";
+
+.brand {
+  margin-bottom: 70px;
+  &__title {
+    font-size: 28px;
+    line-height: 36px;
+    @include r600;
+    color: $bg;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  &-ad {
+    max-width: 1116px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+    &__images {
+
+    }
+    &__image {
+      margin-right: 24px;
+      padding: 26px 33px;
+      border: 1px solid #e4e7ee;
+      border-radius: 10px;
+      background-color: #fff;
+    text-align: center;
+  }
+}
+}
