--- a/src/components/brand/index.scss
+++ b/src/components/brand/index.scss
@@ -13,19 +13,58 @@
   &-ad {
     max-width: 1116px;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-
+    margin: 0 auto;
     &__images {
-
+      display: flex;
+      flex-wrap: wrap;
+      gap: 24px;
     }
-    &__image {
-      margin-right: 24px;
-      padding: 26px 33px;
+
+   
+
+    &__img {
+      width: 166px;
+      height: 100px;
       border: 1px solid #e4e7ee;
       border-radius: 10px;
       background-color: #fff;
-    text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+    &__title {
+      font-size: 15px;
+      line-height: 22px;
+      color: $bg;
+      @include f500;
+      text-align: center;
+      margin-top: 12px;
+    }
   }
-}
+  &__all {
+    cursor: pointer;
+    margin: 0 auto;
+    position: relative;
+    width: 255px;
+    border: 1px solid #b7b8c5;
+    border-radius: 53px;
+    background-color: #fff;
+    padding: 14px 44px 14px 30px;
+    margin-top: 30px;
+    align-items: center;
+    button {
+      border: none;
+      @include f500;
+      color: $bg;
+      font-size: 15px;
+      line-height: 20px;
+      cursor: pointer;
+    }
+    &-arrow {
+      position: absolute;
+      right: 38px;
+      top: 19px;
+    }
+  }
 }
