--- a/src/components/ourBlog/index.scss
+++ b/src/components/ourBlog/index.scss
@@ -1,1 +1,137 @@
 @import "../../scss/vars";
+
+.our-blog {
+    margin-bottom: 46px;
+  &__image {
+    background-image: url(../../images/our-blog.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    max-width: 1280px;
+    width: 100%;
+    height: 536px;
+    padding: 0 82px;
+    position: relative;
+    &-scroll {
+        position: fixed;
+        left: 150px;
+        bottom: -15px;
+        cursor: pointer;
+    }
+    &-chat {
+        position: fixed;
+        right: 130px;
+        bottom: -15px;
+        cursor: pointer;
+    }
+    &-title {
+      @include r600;
+      font-size: 28px;
+      line-height: 36px;
+      color: $bg;
+      text-align: center;
+      padding-top: 65px;
+      padding-bottom: 35px;
+    }
+  }
+  &__slider {
+    max-width: 546px;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #74ccd8;
+    border-radius: 15px;
+    display: flex !important;
+
+    &-image {
+      padding: 10px;
+    }
+    &-data {
+      max-width: 290px;
+      width: 100%;
+      margin-top: 34px;
+      margin-left: 27px;
+      &__date {
+        color: #b7b8c5;
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 12px;
+      }
+      &__title {
+        font-size: 18px;
+        line-height: 24px;
+        color: $bg;
+        @include f500;
+        margin-bottom: 12px;
+      }
+      &__text {
+        font-size: 17px;
+        line-height: 23px;
+        color: #686877;
+        margin-bottom: 21px;
+      }
+      &__more {
+        display: flex;
+      }
+      &__read {
+        color: #74ccd8;
+        @include f600;
+      }
+      &__readArrow {
+        margin-left: 10px;
+        margin-top: 3px;
+      }
+    }
+  }
+  &__btn {
+    background: linear-gradient(180deg, #ed9bc1 0%, #ed9bb9 100%);
+    border-radius: 53px;
+    padding: 14px 44px 14px 30px;
+    color: #fff;
+    font-size: 15px;
+    line-height: 20px;
+    @include f500;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 31px;
+    max-width: 182px;
+    width: 100%;
+    cursor: pointer;
+    position: relative;
+  }
+  &__btnArrow {
+    position: absolute;
+    right: 35px;
+    top: 19px;
+  }
+  .slick-slider{
+    .slick-arrow.slick-prev{
+       width: 0;
+       height: 0;
+        &::before{
+            content: '';
+            position: absolute;
+            background-image: url(../../images/content/out-prev.svg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 10px;
+            height: 20px;
+        }
+    }
+    .slick-arrow.slick-next{
+        width: 0;
+        height: 0;
+         &::before{
+             content: '';
+             position: absolute;
+             background-image: url(../../images/content/out-next.svg);
+             background-size: cover;
+             background-repeat: no-repeat;
+             background-position: center;
+             width: 10px;
+             height: 20px;
+             left: -14px;
+         }
+     }
+  }
+}
