--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,2 +1,140 @@
 @import "../../scss/vars";
 
+.footer {
+  max-width: 1280px;
+  width: 100%;
+  &__inner {
+    background-color: #fff;
+    border: 1px solid #74ccd8;
+    display: flex;
+  }
+  &__contacts {
+    margin-left: 177px;
+
+    &-title {
+      margin-top: 46px;
+      font-size: 18px;
+      line-height: 24px;
+      color: $bg;
+      margin-bottom: 21px;
+      @include f500;
+    }
+    &-phone {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+      a {
+        text-decoration: none;
+        font-size: 14px;
+        line-height: 19px;
+        @include f500;
+        color: $bg;
+        margin-left: 7px;
+      }
+    }
+    &-messengeres {
+      margin-bottom: 20px;
+      &__whatsup {
+        margin-right: 10px;
+      }
+    }
+    &-email {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+
+      a {
+        @include f500;
+        color: $bg;
+        font-size: 14px;
+        line-height: 19px;
+        text-decoration: none;
+      }
+    }
+    &-mail {
+      margin-right: 10px;
+    }
+    &-wach {
+      margin-bottom: 74px;
+      display: flex;
+      align-items: center;
+      span {
+        @include f500;
+        color: $bg;
+        font-size: 14px;
+        line-height: 19px;
+        margin-left: 10px;
+      }
+    }
+  }
+  &__main {
+    border-left: 1px solid #74ccd8;
+    border-right: 1px solid #74ccd8;
+    margin-left: 58px;
+    padding-left: 58px;
+    &-wrapper {
+      display: flex;
+    }
+    &-title {
+      margin-top: 46px;
+      font-size: 18px;
+      line-height: 24px;
+      @include f500;
+      color: $bg;
+      margin-bottom: 21px;
+    }
+  }
+  &__link-left {
+    margin-right: 42px;
+    li {
+      margin-bottom: 10px;
+      a {
+        color: $bg;
+        font-size: 14px;
+        line-height: 19px;
+      }
+    }
+  }
+  &__link-right {
+    margin-right: 58px;
+    li {
+      margin-bottom: 10px;
+      a {
+        color: $bg;
+        font-size: 14px;
+        line-height: 19px;
+      }
+    }
+  }
+  &__social {
+    margin-left: 58px;
+    &-title {
+      margin-top: 46px;
+      margin-bottom: 21px;
+      color: $bg;
+      @include f500;
+      line-height: 24px;
+      font-size: 18px;
+    }
+  }
+  &__apps {
+    margin-bottom: 67px;
+    &-twitter,
+    &-instagram,
+    &-facebook {
+      margin-right: 20px;
+    }
+    &-logo {
+      width: 165px;
+      height: 48px;
+    }
+  }
+  &__bottom {
+    background-color: #74ccd8;
+    color: #fff;
+    text-align: center;
+    padding: 14px;
+    font-size: 14px;
+    line-height: 19px;
+  }
+}
