--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -119,7 +119,7 @@
 
   form{
    position: relative;
-   display: none;
+   display: flex;
    label{
     position: relative;
     margin-right: 88px;
@@ -226,12 +226,27 @@
    }
    
   }
+ 
 
  }
  &__box{
   display: flex;
   align-items: center;
   margin-left: 30px;
+  &-btnAd{
+   display: none;
+   width: 20px;
+   margin-left: 20px;
+   span{
+    display: block;
+    height: 2px;
+    background-color: #B7B8C5;
+    border-radius: 1px;
+    &+span{
+     margin-top: 6px;
+    }
+   }
+  }
   &-user{
    margin-right: 30px;
    background-color: $light;
