--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -298,6 +298,12 @@
     right: -10px;
    }
   }
+  &-searchAdap{
+   display: none;
+  }
+  &-btnList{
+   display: none;
+  }
  }
  &__wrapper{
     position: relative;
