--- a/src/components/sale/index.scss
+++ b/src/components/sale/index.scss
@@ -46,6 +46,10 @@
         text-align: center;
         margin: 10px;
         cursor: pointer;
+        img {
+            width: 180px;
+            height: 180px;
+          }
     
     }
     &-heart{
