--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,8 +1,8 @@
 @media (max-width: 480px) {
   .container {
-    padding: 0 27px; 
+    padding: 0 27px;
     margin: 0 auto;
-}
+  }
   .navigate__wrapper-list {
     display: none;
   }
@@ -72,51 +72,126 @@
       }
     }
   }
- 
-  .slider-presentation{
+  .novelty__card-test,
+  popular__card-test{
     display: block;
-     .slick-slide img {
-    width: 100%;
-}
   }
-  .slider-presentation__right{
+  .slider-presentation {
+    display: block;
+    .slick-slide img {
+      width: 100%;
+    }
+  }
+  .slider-presentation__right {
     display: flex;
     margin-top: 25px;
     width: 100%;
-    
-    img{
+
+    img {
       width: 49%;
     }
     img:last-child {
-     margin-top: 0; 
-     margin-left: 10px;
-  }
+      margin-top: 0;
+      margin-left: 10px;
+    }
   }
   .slider-presentation .slick-slider .slick-arrow.slick-prev::before {
-    top: 93px;
-}
-.slider-presentation .slick-slider .slick-arrow.slick-next::before {
-  bottom: 95px;
-  left: 352px;
-}
-.slider-carousel {
-  padding: 0 10px;
-  margin-left: 0;
-  .slick-slide img {
-    display: block;
-    width: 95%;
-    height: 124px;
-}
-}
-.slider-carousel .slick-slider .slick-arrow.slick-prev::before {
-  top: 53px;
-  right: -10px;
-}
-.slider-carousel .slick-slider .slick-arrow.slick-next::after {
-  bottom: 53px;
-  left: 370px;
-}
+    display: none;
+  }
+  .slider-presentation .slick-slider .slick-arrow.slick-next::before {
+    display: none;
+  }
+  .slider-carousel {
+    margin-left: 0;
+    .slick-slide img {
+      display: block;
+      width: 95%;
+      height: 124px;
+    }
+  }
+  .slider-carousel .slick-slider .slick-arrow.slick-prev::before {
+    display: none;
+  }
+  .slider-carousel .slick-slider .slick-arrow.slick-next::after {
+    display: none;
+  }
+
+  .commercial {
+    flex-wrap: wrap;
+    margin-left: 0px;
+    &__item {
+      margin-bottom: 30px;
+      img{
+        margin-right: 10px;
+      }
+    }
+    &__item + .commercial__item {
+      margin-left: 0px;
+    }
+  }
+  .commercial__item__title {
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .products {
+    margin-left: 0px;
+  }
+  .sale__discount-image,
+  .sale__card-coloured,
+  .sale__card-logistics,
+  .sale__card-recall {
+    display: none;
+  }
+  .sale__card,
+  .novelty__card,
+  .popular__card {
+    margin-left: -10px;
+  }
+  .sale .slick-slider .slick-arrow.slick-next::after,
+  .sale .slick-slider .slick-arrow.slick-prev::before{
+    display: none;
+  }
+  .novelty .slick-slider .slick-arrow.slick-next::after,
+  .novelty .slick-slider .slick-arrow.slick-prev::before{
+    display: none;
+  }
+  .products__image {
+    max-width: 120px;
+    gap: 10px;
+    &:hover{
+      background: #fff;
+      box-shadow: 0px 2px 4px rgba(51, 196, 223, 0.2);
+      border-radius: 10px;
+      text-align: center;
+      padding: 24px 13px;
+      .products__image-title{
+          color: #090F24;
+      }
+      }
+      img{
+          margin: 0 auto;
+      }
+  }
+  .products__image-title {
+    font-size: 13px;
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 400;
+  }
+  .sale__card-heart {
+    right: 10px;
+  }
+  .popular .slick-slider .slick-arrow.slick-prev::before,
+  .popular .slick-slider .slick-arrow.slick-next::after{
+    display: none;
+  }
   
+  .novelty__card-testimonial,
+  .popular__card-testimonial{
+    display: none;
+  }
+ 
   .navigate__wrapper-logo {
     display: none;
   }
@@ -161,4 +236,3 @@
     padding: 15px 0 14px;
   }
 }
-
