--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -191,7 +191,122 @@
   .popular__card-testimonial{
     display: none;
   }
- 
+  .about-discounts__title {
+    text-align: center;
+    line-height: 26px;
+    font-size: 24px;
+}
+.about-discounts__text {
+  font-size: 11px;
+  line-height: 14px;
+  text-align: center;
+}
+.about-discounts__form {
+  display: block;
+}
+.about-discounts input,
+.about-discounts button {
+  max-width: 100%;
+}
+.about-discounts input {
+  margin-bottom: 12px;
+}
+.about-discounts__image {
+  background-image: url(../images/aboutDisc.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 480px;
+  width: 100%;
+  height: 716px;
+}
+.about-discounts__test{
+  padding: 455px 27px;
+}
+.about-discounts__title,
+.about-discounts__text {
+  padding: 0 46px;
+}
+.about-us__inner{
+  display: block;
+  margin-left: 0;
+}
+.about-us__inner-info__title{
+  font-size: 26px;
+  line-height: 34px;
+}
+.about-us__inner-info__text {
+  font-size: 15px;
+  line-height: 22px;
+}
+.about-us__inner-info__read{
+  display: none;
+}
+.about-us__inner-image {
+  background-image: url(../images/aboutUsAd.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  max-width: 480px;
+  width: 100%;
+  height: 445px;
+}
+.about-us__inner-info {
+  margin-bottom: 35px;
+  padding-left: 24px;
+  padding-right: 27px;
+}
+.brand-ad__img {
+  width: 135px;
+}
+.brand-ad__images {
+   gap: 0px; 
+}
+.brand-ad__title {
+  font-size: 13px;
+  line-height: 20px;
+}
+.contacts__image {
+  background-image: url(../images/contactsAdap.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: 971px;
+  position: relative;
+  margin: 0 auto;
+}
+.contacts__info {
+  right: 0px; 
+  padding: 0 27px;
+}
+.contacts__info-title {
+  font-size: 26px;
+  line-height: 33px;
+}
+.contacts__info-text{
+  font-size: 14px;
+}
+.contacts__info-form__area p{
+  display: none;
+}
+.contacts__info-form__checkbox {
+  margin-bottom: 25px;
+}
+.contacts__info-form__checkbox p {
+  font-size: 11px;
+  line-height: 17px;
+  margin-left: 11px;
+}
+.contacts__info-form label input[type=checkbox] {
+  top: 2px;
+}
+.contacts__info {
+  top: 44px;
+}
+.reviews {
+  margin-left: 0px;
+}
   .navigate__wrapper-logo {
     display: none;
   }
